--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,22 @@ jobs:
   build:
     docker:
       # specify the version
-      - image: circleci/golang:1.12
+      - image: kjintroverted/go-node
 
     working_directory: ~/dungeon
     steps:
       - checkout
       # specify any bash command here prefixed with `run: `
+      - run: git clone git@github.com:kjintroverted/dragon-ui.git ../dragon-ui
+      - run: git clone git@github.com:kjintroverted/dnd-build.git ../build
       - run: go build .
+      - run: mv dungeon ../build
+      - run: cd ../dragon-ui
+      - run: npm i
+      - run: npm run build:heroku
+      - run: rm -r ../build/app
+      - run: cp -r build ../build/app
+      - run: cd ../build
+      - run: git add -A
+      - run: git commit -m "new build $date"
+      - run: git push
