--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - checkout
       # specify any bash command here prefixed with `run: `
       - run: git clone git@github.com:kjintroverted/dragon-ui.git ../dragon-ui
-      - run: git clone git@github.com:kjintroverted/dnd-build.git ../build
+      - run: mkdir ../build
       - run: go build .
       - run: mv dungeon ../build
       - run: cd ../dragon-ui
