--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,6 @@ jobs:
   build:
     docker:
       - image: kjintroverted/go-node
-
     working_directory: ~
     steps:
       - checkout
@@ -16,6 +15,7 @@ jobs:
       - run: git clone git@github.com:kjintroverted/dragon-ui.git
       - run: git clone git@github.com:kjintroverted/dnd-build.git build
       - run: cp build/secret_firebase.json dragon-ui/src/secret_auth_config.json
+      - run: ls -la
       - run: cd dungeon && go build .
       - run: mv dungeon/dungeon build
       - run: cd dragon-ui && npm i
