--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,6 @@ jobs:
   build:
     docker:
       - image: kjintroverted/go-node
-
     working_directory: ~/dungeon
     steps:
       - checkout
@@ -22,5 +21,5 @@ jobs:
       - run: cd ../dragon-ui && npm run build:heroku
       - run: rm -r ../build/app
       - run: cp -r ../dragon-ui/build ../build/app
-      - run: cd ../build && git push
+      - run: cd ../build && git add -A && git commit -m "CI build @ $date" && git push
       
